# SOLDATO2.github.io

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  Dockerfile  _config.yml  conanfile.txt
.github/workflows/: jekyll-gh-pages.yml
src/: main.cpp
